// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package ghost.core;

option go_package = "corepb";

// run-as
message RunAsRequest {
        uint32 GhostID = 1;

        string Username = 2;
        string Process = 3;
        repeated string Args = 4;
}

message RunAs {
        string Output = 1;
        string Err = 2;
}

// impersonate
message ImpersonateRequest {
        uint32 GhostID = 1;

        string Username = 2;
}

message Impersonate {
        string Err = 1;
}

// rev-to-self
message RevertToSelfRequest {
        uint32 GhostID = 1;
}

message RevertToSelf {
        string Err = 1;
}

// getsystem
message GetSystemRequest {
        uint32 GhostID = 1;

        string HostingProcess = 2;
        bytes Shellcode = 3;
}

message GetSystem {
        string Output = 1;
}

// elevate
message ElevateRequest {
        uint32 GhostID = 1;

        int32 Timeout = 2;
}

message Elevate {
        bool Success = 1;
        string Err = 2;
}

